package rubrica;

public class Tipo {
    public static final String[] tipi = {
        "Principale",
        "Abitazione",
        "Lavoro"
    };
}
