@startuml
package rubrica {
    class Rubrica {
        - contatti : ArrayList<Contatto>

        + aggiungiContatto(contatto : Contatto) : boolean
        + cancellaContatto(contatto : Contatto) : Contatto
        + modificaContatto(contattoIniziale : Contatto, contattoModificato : Contatto) : Contatto
        + addNumeroToContatto(contatto : Contatto, numero : Numero) : boolean
        + cercaContatto(ricerca : String, tipoRicerca : int) : ArrayList<Contatto>
        - ordina() : void
    }
    class Contatto {
        - nome : String
        - cognome : String
        - numeri : ArrayList<Numero>
        - email : String
        - indirizzo : String
        - nota : String

        + addNumeri(numero : Numero) : void
        + deleteNumero(numero : Numero) : Numero
    }
    class Numero {
        - telefono : String
        - tipo : String

        - inizializzaTipo() : void
    }
    class Tipo {
        + tipi : String[]
    }
}
Numero --> Tipo
Numero "1..*" --o "1" Contatto
Contatto "1..*" --o "1" Rubrica
@enduml